application/injection-cicd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devfest-injection-cicd
  labels:
    app: devfest-injection-cicd
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: devfest-injection-cicd
  template:
    metadata:
      labels:
        app: devfest-injection-cicd
    spec:
      containers:
        - name: helm-guestbook
          image: "ghcr.io/anthonydurot/devfest-2021:injection-secret-cicd"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
