application/injection-cicd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devfest-injection-cicd
  labels:
    app: devfest-injection-cicd
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: devfest-injection-cicd
    release: devfest-injection-cicd
