application/injection-cicd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-ingress
  namespace: devfest-cicd-injection
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: cicd.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devfest-cicd-injection
            port:
              number: 8080
